ecmascript/parser/tests/typescript-errors/tsc/async/es6/asyncSetter_es6/input.ts.stderr
error: Expected (, got foo
 --> $DIR/tests/typescript-errors/tsc/async/es6/asyncSetter_es6/input.ts:4:13
  |
4 |   async set foo(value) {
  |             ^^^

